# PlatiniumOS

./: Cargo.toml  README.md
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  main.rs  memory.rs  reading.rs  vga_buffer.rs
src/shell/: calculator.rs  command_runner.rs  commands.rs  mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs
